# fit-viewer

./: .gitignore  17891661068_ACTIVITY.fit  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
media/: webview.html
src/: extension.js  extension.ts  fitFileEditorProvider.js  fitFileEditorProvider.ts  fitParser.js  fitParser.ts  parseMessages.ts
src/test/: extension.test.ts
src/types/: garmin-fit-sdk.d.ts
vis/: TRACKR_Fenix7Pro_Race.fit  pyproject.toml
vis/TRACKR_Fenix7Pro_Race/: 104.parquet  113.parquet  13.parquet  140.parquet  141.parquet  147.parquet  22.parquet  233.parquet  288.parquet  325.parquet  326.parquet  327.parquet  394.parquet  79.parquet  activity_mesgs.parquet  device_info_mesgs.parquet  device_settings_mesgs.parquet  event_mesgs.parquet  file_creator_mesgs.parquet  file_id_mesgs.parquet  gps_metadata_mesgs.parquet  hrv_mesgs.parquet  lap_mesgs.parquet  record_mesgs.parquet  session_mesgs.parquet  split_mesgs.parquet  split_summary_mesgs.parquet  sport_mesgs.parquet  time_in_zone_mesgs.parquet  timestamp_correlation_mesgs.parquet  user_profile_mesgs.parquet  zones_target_mesgs.parquet
vis/vis/: chart.json  main.ipynb
